# genai-recommendations

./: Dockerfile  README.md  api.py  app.py  data_preparation.py  documentation.md  prompt.jinja2  pyproject.toml  recommendation.py  test.ipynb  utils.py
backend/: Dockerfile  api.py  pyproject.toml
backend/src/: data_classes.py  data_preparation.py  recommendations.py
backend/templates/: recommendations.jinja2  system_message.jinja2
data/: data.json
docs/: documentation.md
frontend/: app.py  pyproject.toml
src/: data_classes.py  data_preparation.py  recommendation.py
